--- a/pages/index.css
+++ b/pages/index.css
@@ -1,247 +1,13 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: Inter, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  padding: 30px 80px 40px;
-  position: relative;
-  box-sizing: border-box;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  height: 39px;
-  width: 105px;
-  position: relative;
-  left: -50px;
-}
-
-.nav__links {
-  margin: 8px 0 0;
-  display: flex;
-  column-gap: 20px;
-  list-style-type: none;
-  padding: 0;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.header__title {
-  z-index: 1;
-  max-width: 729px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-  margin: 183px 0 0;
-}
-
-.header__description {
-  max-width: 683px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 28px 0 0;
-}
-
-.outline {
-  display: block;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  color: #2f80ed;
-}
-
-.header__image {
-  z-index: auto;
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-}
-
-.header__footer {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  display: flex;
-  justify-content: space-between;
-  box-sizing: border-box;
-  color: #838383;
-  margin-top: auto;
-}
-
-.hours {
-  margin: 0%;
-}
-
-.recipes {
-  padding: 100px 80px;
-  background-color: #0a2750;
-}
-
-.recipes__title {
-  max-width: 580px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #fff;
-  margin: 0%;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  color: #fff;
-  line-height: 30px;
-  margin: 24px 0 0;
-}
-
-.recipes__videos {
-  display: flex;
-  gap: 40px;
-  justify-content: center;
-  margin: 80px 0 0;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-  margin: 24px 0 0;
-}
-
-.reservation {
-  padding: 100px 0 120px;
-  background-color: #d9e7ff;
-  background-position: center;
-  background-image: url(../images/background_reservation.svg);
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form__fieldset {
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-.form__label {
-  display: block;
-  margin-bottom: 32px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  border-color: #838383;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-}
-
-.form__input_datetime-local {
-  padding-left: 12px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #000000;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: 8px;
-  height: 60px;
-}
-
-::placeholder {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-  padding-left: 12px;
-}
-
-.form__button {
-  width: 100%;
-  padding: 0;
-  border: none;
-  margin-bottom: 32px;
-  height: 60px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #fff;
-  background-color: #2f80ed;
-}
-
-.form__checkbox {
-  margin-right: 12px;
-  border-color: #838383;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/outline.css");
+@import url("../blocks/hours.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/menu.css");
+@import url("../blocks/card.css");
+@import url("../blocks/about.css");
+@import url("../blocks/footer.css");
