--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,3 +1,16 @@
+@keyframes pulsate {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.3, 0);
+  }
+}
+
 .about {
   padding: 100px 80px;
   background-color: #0a2850;
@@ -16,7 +29,7 @@
   font-size: 44px;
   line-height: 52px;
   font-weight: 500;
-  z-index: 2;
+  z-index: 3;
   max-width: 251px;
   position: relative;
 }
@@ -49,24 +62,18 @@
   position: absolute;
   top: -152px;
   left: -129px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .about__circle_animation_blurred {
-  box-shadow: 0 0 50px;
-  color: #2f80ed;
+  width: 150%;
+  height: 150%;
+  position: relative;
+  z-index: 1;
+  border-radius: inherit;
+  background: inherit;
   animation-name: pulsate;
   animation-duration: 1.3s;
   animation-timing-function: ease-in-out;
-  transform: scale(1.3);
-}
-
-@keyframes pulsate {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 0.6;
-  }
+  animation-iteration-count: infinite;
 }
