--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,6 +7,9 @@
   padding: 30px 80px 40px;
   position: relative;
   box-sizing: border-box;
+  background-position: right;
+  background-image: url(../images/background_header.svg);
+  background-repeat: no-repeat;
 }
 
 .header__title {
