--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,6 +1,8 @@
 .recipes {
   padding: 100px 80px;
   background-color: #0a2750;
+  background-position: center;
+  background-image: url(../images/background_recipes.svg);
 }
 
 .recipes__title {
