--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  display: block;
   box-sizing: border-box;
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
   color: #fff;
