--- a/blocks/about.css
+++ b/blocks/about.css
@@ -7,7 +7,7 @@
   }
   100% {
     opacity: 0;
-    transform: scale(1.3, 0);
+    transform: scale(1.3);
   }
 }
 
@@ -66,12 +66,14 @@
 }
 
 .about__circle_animation_blurred {
-  width: 150%;
-  height: 150%;
-  position: relative;
+  background-color: #2f80ed;
+  width: 426px;
+  height: 426px;
+  border-radius: 50%;
+  position: absolute;
+  top: -152px;
+  left: -129px;
   z-index: 1;
-  border-radius: inherit;
-  background: inherit;
   animation-name: pulsate;
   animation-duration: 1.3s;
   animation-timing-function: ease-in-out;
