--- a/blocks/about.css
+++ b/blocks/about.css
@@ -24,7 +24,7 @@
 
 .about__title {
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-size: 44px;
   line-height: 52px;
@@ -36,7 +36,7 @@
 
 .about__content {
   padding: 19px 0 73px 0;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Arial, sans-serif;
   font-style: normal;
   font-size: 20px;
   line-height: 30px;
@@ -66,13 +66,6 @@
 }
 
 .about__circle_animation_blurred {
-  background-color: #2f80ed;
-  width: 426px;
-  height: 426px;
-  border-radius: 50%;
-  position: absolute;
-  top: -152px;
-  left: -129px;
   z-index: 1;
   animation-name: pulsate;
   animation-duration: 1.3s;
