--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,7 +4,7 @@
 }
 
 .card__title {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -16,7 +16,7 @@
   padding: 0;
   list-style-type: none;
   margin-bottom: 16px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
