--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -11,10 +11,6 @@
   justify-content: space-between;
 }
 
-.footer__social-heading {
-  margin-left: 80px;
-}
-
 .footer__logo {
   width: 105px;
   height: 39px;
@@ -27,7 +23,7 @@
 }
 
 .footer__list-item {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   margin: 0 0 16px;
@@ -40,7 +36,7 @@
 
 .footer__social-heading {
   margin: 0 0 20px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -54,7 +50,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  transition: opacity 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 .footer__social-link:hover {
@@ -70,7 +66,7 @@
 
 .footer__copyright {
   margin: 108px 0 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
