--- a/blocks/form.css
+++ b/blocks/form.css
@@ -11,7 +11,7 @@
 .form__label {
   display: block;
   margin-bottom: 32px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -26,7 +26,7 @@
 
 .form__input_datetime-local {
   padding-left: 12px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -40,10 +40,12 @@
   box-sizing: border-box;
   margin-top: 8px;
   height: 60px;
+  border: 1px solid #838383;
+  border-radius: 4px;
 }
 
-::placeholder {
-  font-family: "Inter";
+.form__input::placeholder {
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -55,16 +57,18 @@
 .form__button {
   width: 100%;
   padding: 0;
-  border: none;
+  border-radius: 4px;
+  border: 1px solid #838383;
   margin-bottom: 32px;
   height: 60px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #fff;
   background-color: #2f80ed;
+  transition: background-color 1s;
 }
 
 .form__button:hover {
