--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,15 +7,15 @@
   padding: 30px 80px 40px;
   position: relative;
   box-sizing: border-box;
-  background-position: right;
   background-image: url(../images/background_header.svg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header__title {
   z-index: 1;
   max-width: 729px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 60px;
@@ -24,9 +24,17 @@
   margin: 183px 0 0;
 }
 
+.span__accent {
+  display: block;
+  font-family: "Noto Serif", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
 .header__description {
   max-width: 683px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -44,7 +52,7 @@
 }
 
 .header__footer {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
