--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,14 +1,14 @@
 .menu {
   padding: 100px 0 100px;
   background-color: #fff;
-  background-position: cover;
   background-image: url(../images/background_menu.svg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .menu__title {
   max-width: 780px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -19,7 +19,7 @@
 }
 
 .menu__subtitle {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
