--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -21,7 +21,11 @@
 .nav__link {
   color: #000000;
   text-decoration: none;
-  font-weight: bold;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .nav__link:hover {
