--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,8 +1,10 @@
 .recipes {
-  padding: 100px 80px;
+  padding: 100px 80px 215px;
   background-color: #0a2750;
   background-position: center;
+  background-size: cover;
   background-image: url(../images/background_recipes.svg);
+  background-repeat: no-repeat;
 }
 
 .recipes__title {
@@ -37,12 +39,13 @@
 .recipes__iframe {
   width: 480px;
   height: 273px;
+  border: none;
 }
 
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
