--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -3,12 +3,13 @@
   background-color: #d9e7ff;
   background-position: center;
   background-image: url(../images/background_reservation.svg);
+  background-size: cover;
 }
 
 .reservation__title {
   margin: 0 0 80px;
   text-align: center;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
