--- a/blocks/form.css
+++ b/blocks/form.css
@@ -22,6 +22,7 @@
 .form__label_type_checkbox {
   display: flex;
   justify-content: center;
+  margin-bottom: 0;
 }
 
 .form__input_datetime-local {
@@ -78,4 +79,6 @@
 .form__checkbox {
   margin-right: 12px;
   border-color: #838383;
+  height: 20px;
+  width: 20px;
 }
