--- a/blocks/header.css
+++ b/blocks/header.css
@@ -24,7 +24,7 @@
   margin: 183px 0 0;
 }
 
-.span__accent {
+.header__span-accent {
   display: block;
   font-family: "Noto Serif", Arial, sans-serif;
   font-style: italic;
@@ -59,7 +59,12 @@
   line-height: 20px;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   box-sizing: border-box;
   color: #838383;
   margin-top: auto;
+}
+
+.header__paragraph {
+  margin: 0;
 }
