--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,7 +4,7 @@
 }
 
 .card__title {
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, Verdana;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -15,8 +15,8 @@
 .card__list {
   padding: 0;
   list-style-type: none;
-  margin-bottom: 16px;
-  font-family: "Noto Serif", Arial, sans-serif;
+
+  font-family: "Noto Serif", Arial, Verdana;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -25,6 +25,7 @@
 
 .card__list-item {
   display: flex;
+  margin: 0 0 16px;
 }
 
 .card__list-item:last-child {
