--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -23,7 +23,7 @@
 }
 
 .footer__list-item {
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, Verdana;
   font-style: normal;
   font-weight: normal;
   margin: 0 0 16px;
@@ -36,7 +36,7 @@
 
 .footer__social-heading {
   margin: 0 0 20px;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, Verdana;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -66,7 +66,7 @@
 
 .footer__copyright {
   margin: 108px 0 0;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, Verdana;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
