--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -21,7 +21,7 @@
 .nav__link {
   color: #000000;
   text-decoration: none;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, Verdana;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
