--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -9,7 +9,7 @@
 
 .recipes__title {
   max-width: 580px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, Verdana;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -20,7 +20,7 @@
 
 .recipes__subtitle {
   max-width: 438px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Arial, Verdana;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -45,7 +45,7 @@
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, Verdana;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
